# data-cycle-engineering-sportflow

./: .dockerignore  .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
airflow/dags/: competition_gold_dag.py  competition_ingestion_dag.py  competition_pipeline_dag.py  competition_silver_dag.py  fixture_pipeline_dag.py  seasons_pipeline_dag.py  sportflow_master_pipeline_dag.py  standing_pipeline_dag.py  team_pipeline_dag.py
config/: .env
docker/airflow/: Dockerfile
docker/minio/: Dockerfile
docs/: data_catalog.md
infrastructure/postgres/: init.sql
infrastructure/sql/: create_silver_competitions.sql
src/bronze/competitions/: reader.py  test_reader.py
src/bronze/fixtures/: reader.py
src/bronze/seasons/: reader.py
src/bronze/standings/: reader.py
src/bronze/teams/: reader.py
src/common/: minio_client.py  monitoring.py  postgres.py
src/common/quality/: competitions.py  fixtures.py  standings.py  teams.py
src/common/storage/: create_buckets.py  minio_client.py
src/config/: settings.py
src/gold/: create_gold_tables.py
src/gold/competitions/: loader.py  run.py  service.py  transformer.py
src/gold/fixtures/: loader.py  run.py  service.py  transformer.py
src/gold/seasons/: loader.py  run.py  service.py  transformer.py
src/gold/standings/: loader.py  run.py  service.py  transformer.py
src/gold/teams/: loader.py  run.py  service.py  transformer.py
src/ingestion/competitions/: client.py  extractor.py  minio_storage.py  run.py  service.py  storage.py
src/silver/: create_silver_tables.py
streamlit/: app.py
(+42 files in other folders)
